--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
-
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <title>Děkujeme za platbu</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #fffdf6;
-            text-align: center;
-            padding: 40px;
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #e85d04;
-            margin-bottom: 30px;
-        }
-        img {
-            max-width: 90%%;
-            height: auto;
-            margin: 20px 0;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            border-radius: 12px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Děkujeme za účast</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+    }
+
+    #bgVideo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100vw;
+      min-height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+    }
+
+    .overlay-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 3em;
+      font-weight: bold;
+      text-align: center;
+      text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Děkujeme za platbu!</h1>
-    <img src="images/5d294920-d5a6-4b76-a705-81d2d0e85294.jpg" alt="5d294920-d5a6-4b76-a705-81d2d0e85294.jpg">
-    <img src="images/6c3b05bf-68de-4b3c-b210-abbb14682072.jpg" alt="6c3b05bf-68de-4b3c-b210-abbb14682072.jpg">
-    <img src="images/9996f197-8d8e-4b49-97f0-4f3bd1296e88.jpg" alt="9996f197-8d8e-4b49-97f0-4f3bd1296e88.jpg">
-    <img src="images/69781dff-6c5c-42f4-b8a4-c2cfae6ab7d9.jpg" alt="69781dff-6c5c-42f4-b8a4-c2cfae6ab7d9.jpg">
-    <img src="images/190726ac-578c-48c7-8192-33242f322a36.jpg" alt="190726ac-578c-48c7-8192-33242f322a36.jpg">
-    <img src="images/cd99e76e-ef94-404a-a07b-9a8497592d42.jpg" alt="cd99e76e-ef94-404a-a07b-9a8497592d42.jpg">
-    <img src="images/ChatGPT_Image_May_20,_2025,_12_11_27_PM.jpg" alt="ChatGPT_Image_May_20,_2025,_12_11_27_PM.jpg">
-    <img src="images/ChatGPT_Image_May_20,_2025,_12_38_47_PM.jpg" alt="ChatGPT_Image_May_20,_2025,_12_38_47_PM.jpg">
-    <img src="images/ChatGPT_Image_May_20,_2025,_12_46_02_PM.jpg" alt="ChatGPT_Image_May_20,_2025,_12_46_02_PM.jpg">
-    <img src="images/ChatGPT_Image_May_20,_2025,_12_51_59_PM.jpg" alt="ChatGPT_Image_May_20,_2025,_12_51_59_PM.jpg">
+
+<video autoplay muted loop id="bgVideo">
+  <source src="background.mp4" type="video/mp4">
+  Váš prohlížeč nepodporuje HTML5 video.
+</video>
+
+<div class="overlay-text">
+  DĚKUJEME ZA ÚČAST NA AKCI<br>A VAŠI PLATBU
+</div>
 
 </body>
 </html>
